# HW1_stereo_vision

./: CMakeLists.txt  README.md
results/Art/: Art_window_1_processing_time.txt  Art_window_3_processing_time.txt  Art_window_5_processing_time.txt
results/Art/tune_lambda/: Art_w1_l100_processing_time.txt  Art_w1_l150_processing_time.txt  Art_w1_l1_processing_time.txt  Art_w1_l200_processing_time.txt  Art_w1_l20_processing_time.txt  Art_w1_l25_processing_time.txt  Art_w1_l30_processing_time.txt  Art_w1_l35_processing_time.txt  Art_w1_l40_processing_time.txt  Art_w1_l50_processing_time.txt  Art_w1_l60_processing_time.txt  Art_w1_l70_processing_time.txt  Art_w1_l80_processing_time.txt  Art_w1_l90_processing_time.txt
results/Books/: Books_window_1_processing_time.txt  Books_window_3_processing_time.txt  Books_window_5_processing_time.txt
results/Books/tune_lambda/: Books_w1_l100_processing_time.txt  Books_w1_l150_processing_time.txt  Books_w1_l200_processing_time.txt  (+8 more)
results/Dolls/: Dolls_window_1_processing_time.txt  Dolls_window_3_processing_time.txt  Dolls_window_5_processing_time.txt
results/Laundry/: Laundry_window_1_processing_time.txt  Laundry_window_3_processing_time.txt  Laundry_window_5_processing_time.txt
results/Moebius/: Moebius_window_1_processing_time.txt  Moebius_window_3_processing_time.txt  Moebius_window_5_processing_time.txt
results/Reindeer/: Reindeer_window_1_processing_time.txt  Reindeer_window_3_processing_time.txt  Reindeer_window_5_processing_time.txt
src/: disparity2pc.cpp  evaluation.py  main.cpp  main.h  python_utils.py
(+11 files in other folders)
